--- a/主界面/index.html
+++ b/主界面/index.html
@@ -3,14 +3,28 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>map</title>
-		<link rel="stylesheet" href="./css/background.css">
+		<link rel="stylesheet" href="./css/background.css" >
+		<link rel="stylesheet" href="./css/wenzi.css">
 		<script src="./js/echarts.js"></script>
 		<script src="./js/china.js"></script>
 
 	</head>
 	<body>
-		<div style="position: fixed;z-index: 999;">家乡(文字未想好版)</div>
-		<div id="mainmap" style="width:85vw;height:85vw;position: fixed;margin-top: -15dvw;margin-left: 5dvw;z-index: 999;opacity:0.85;"></div>
+		<div class="word" style="position: relative;z-index: 600;">
+			<h2>
+				尊敬的旅客，你想去见怎样的中国？
+			</h2>
+		</div>
+		<div class="sentence"style="position: relative;;z-index: 600;">
+			<h3  style="text-align: left;">
+				<p><span>是</span><span>9</span><span>6</span><span>0</span><span>万</span><span>平</span><span>方</span><span>公</span><span>里</span><span>的</span><span>广</span><span>阔</span><br /></p>
+				
+			</h3>
+			<h3 style="text-align: right;">
+				<p style="margin-top: -1%;"><span>还</span><span>是</span><span>3</span><span>0</span><span>0</span><span>万</span><span>平</span><span>方</span><span>公</span><span>里</span><span>的</span><span>澎</span><span>湃</span></p>
+			</h3>
+		</div>
+		<div id="mainmap" style="width:100vw;height:100vh;position: absolute;margin-top: -11vh;z-index: 500;opacity:0.85;"></div>
 		<script>
 			var mymap=echarts.init(document.getElementById('mainmap'));
 			var option={
@@ -31,7 +45,7 @@
 						zlevel:-1,
 						shadowBlur:5,
 						backdropBlur: 5,
-						shadowColor:'#00000090',
+						shadowColor:'#ffffff90',
 						shadowOffsetY:1,
 						
 					},
