--- a/--main/主界面/index.html
+++ b/--main/主界面/index.html
@@ -288,7 +288,7 @@
 					location.href="../江苏/样例.html";
 				}
 				else if(option.data.name=='安徽'){
-					location.href="../安徽/安徽2.0/代码.html";
+					location.href="../安徽/代码.html";
 				}
 				else if(option.data.name=='新疆'){
 					location.href="../新疆/新疆/新疆.html";
